# RICE_Algorithmic_Robotics_2025_Fall

./: README.md
project1/: README.md  benchmark.db  benchmark_2.db
project1/project1/: CMakeLists.txt  Makefile  README.md  collision_server.py  ompl_benchmark_statistics.py  visualize_solution.py
project1/project1/__MACOSX/Project1/: ._collision_server.py
project1/project1/fetch/: fetch_hard.yml  fetch_simple.yml  problems.pkl
project1/project1/include/: ManipulatorPlanner.h  PyBulletInterface.h
project1/project1/ompllet/: pybullet_interface.py
project1/project1/src/: ManipulatorPlanner.cpp  PyBulletInterface.cpp  RigidBodyPlanning.cpp  RigidBodyPlanningWithControls.cpp  benchmarking.cpp  project1.cpp
project1/project1/ur5/: bookshelf_tall_1.yml  design_problem_example.yml  ur5_example_problem.yml
project2/: README.md
project2/Project2_vc68/: Project2  vc68_Chung_Yu_(Vincent)_Chang_Project 2.docx
project2/Project2_vc68/src/: CollisionChecking.cpp
project3/: README.md
project3/project3_2025_part_b/project3_2025/: .clang-format  .clangd  .gitignore  Makefile  README
project3/project3_2025_part_b/project3_2025/provided/: PathAnalyzer.cpp  (+7 more)
project4/: README.md
project4/Project4_cl307_vc68/: benchmark_car.db  benchmark_pendulum.db
project4/Project4_cl307_vc68/src/: Project4Car.cpp  Project4Pendulum.cpp  RG-RRT.cpp  RG-RRT.h
project5/: Project5_vc68_mk232_slides.pptx  README.md
project5/workspace/scripts/: panda_trajopt_empty.py  part1.py  part1_test.py  part1_with_visualization.py  part2.py  part2_complete.py  plot.py  sphere_cage_example.py
(+12 files in other folders)
